<resources>
    <string name="market_not_found">%1$s program is not installed. Please install the program and try again.</string>
    <string name="cfg_info">About</string>
    <string name="package_name">com.mxtech.videoplayer.ad</string>
    <string name="resume_last">@string/resume</string>
    <string name="cfg_color_depth">Color depth</string>
    <string name="cfg_color_depth_summary">Select color depth of s/w decoded video. 32 bits color will improve color accuracy at the expense of memory usage and rendering speed.</string>
    <string name="cfg_thumbnail">Show thumbnail</string>
    <string name="cfg_new_tag">\"NEW\" tagged period</string>
    <string name="cfg_new_tag_summary">\"NEW\" tag will be appended for this period of time after file was copied.</string>
    <string name="cfg_new_tag_dialog_message">"Enter number of days to display 'New' tag:"</string>
    <string name="show_quit_button">Quit button</string>
    <string name="show_quit_button_summary">Place quit button on the menu. Unlike \"back\" or \"home\" button, it completely terminates application.</string>
    <string name="quit">Quit</string>
    <string name="list_theme">Theme</string>
    <string name="cfg_tuner_drag">Touch controls</string>
    <string name="cfg_tuner_drag_summary">Touch controls: touch actions, gestures.</string>
    <string name="auto_hide_soft_buttons">Auto-hide soft buttons</string>
    <string name="fullscreen">Full screen</string>
    <string name="cfg_tuner_screen_summary">Screen settings: orientation, full screen, brightness, etc.</string>
    <string name="resume_last_summary">Select whether to resume last position and state.</string>
    <string name="resume_last_ask">Do you wish to resume the last play position and state?</string>
    <string name="use_by_default">Use by default</string>
    <string name="how_to_reset_resume_last">Clear default in Settings > Player > Resume.</string>
    <string name="zoom_limited">Limit video resizing</string>
    <string name="zoom_limited_summary">"Don't resize h/w decoded video screen over physical screen size."</string>
    <string name="subtitle_folder">Subtitle folder</string>
    <string name="subtitle_folder_summary">Subtitles will be loaded from both subtitle folder and video folder.</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="sticky">Background play</string>
    <string name="sticky_summary">Playback will be continued in the background even after screen closed.</string>
    <string name="sticky_audio">Background play (audio)</string>
    <string name="sticky_audio_summary">Use background play for audio playback.</string>
    <string name="settings">Settings</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="play">Play</string>
    <string name="core_limit">CPU core limit</string>
    <string name="core_limit_summary">Specify the maximum number of CPU cores to be used for s/w decoding.</string>
    <string name="error_report">Bug report</string>
    <string name="cfg_subtitle_auto_display_embedded">Enable embedded subtitles</string>
    <string name="cfg_subtitle_auto_display_embedded_summary">Show subtitles embedded in the video file or stream.</string>
    <string name="correct_hw_aspect_ratio">Correct aspect ratio</string>
    <string name="correct_hw_aspect_ratio_summary">Correct aspect ratio of h/w decoded videos. Use this option if h/w decoder ignores aspect ratio.</string>
    <string name="button_backlight_off">Turn off button backlight</string>
    <string name="button_backlight_off_summary">"Turn off main buttons' backlight during playback. (If backlight keeps turning on in spite of this option, uncheck this option and reboot device if necessary)."</string>
    <string name="font_folder">Font folder</string>
    <string name="ssa_long">SubStation Alpha</string>
    <string name="ssa_summary">SubStation Alpha subtitle settings.</string>
    <string name="allow_edits">Allow edit menu</string>
    <string name="allow_edits_summary">Enable edit menu which allows you to delete or rename files and folders.</string>
    <string name="shuffle">Shuffle</string>
    <string name="loop">Loop</string>
    <string name="smart_prev">Smart previous button</string>
    <string name="smart_prev_summary">The previous video button either opens previous video or restarts current video from the beginning depending on playback position.</string>
    <string name="subtitle_show_hw">H/W subtitle</string>
    <string name="subtitle_show_hw_summary">Show h/w subtitle if h/w decoder supports it.</string>
    <string name="place_at_the_bottom">Place at the bottom</string>
    <string name="audio_focus">Stop other players</string>
    <string name="audio_focus_summary">Stop other players while playing back videos.</string>
    <string name="show_left_time">Show remaining time</string>
    <string name="tools">Tools</string>
    <string name="play_video_links">Play video links</string>
    <string name="play_video_links_summary">Play HTTP/HTTPS video links. This option may interfere with file downloading.</string>
    <string name="features">Features</string>
    <string name="whats_new">"What's new"</string>
    <string name="reset_settings">Reset settings</string>
    <string name="reset_settings_explain">Resets all settings to their default condition.</string>
    <string name="resume_only_first">Resume only the first video</string>
    <string name="resume_only_first_explain">Apply resume setting only on the first video. Next videos will start from the beginning.</string>
    <string name="swdecoder_local">S/W decoder (local)</string>
    <string name="swdecoder_local_summary">Use s/w decoder for local files stored on the device.</string>
    <string name="default_swdecoder_net">S/W decoder (network)</string>
    <string name="default_swdecoder_net_summary">Use s/w decoder for network play from remote sources via HTTP, FTP, RTSP, MMS and more.</string>
    <string name="omxdecoder_use">Use h/w+ decoder</string>
    <string name="omxdecoder_local">H/W+ decoder (local)</string>
    <string name="omxdecoder_local_summary">Set h/w+ decoder as the default h/w decoder for local files.</string>
    <string name="omxdecoder_net">H/W+ decoder (network)</string>
    <string name="omxdecoder_net_summary">Set h/w+ decoder as the default h/w decoder for network play.</string>
    <string name="omxdecoder_10bit">H/W+ decoder (10-bit)</string>
    <string name="omxdecoder_10bit_summary">Use H/W+ decoder for videos that have 10-bit color format.</string>
    <string name="custom_codec">Custom codec</string>
    <string name="custom_codec_summary">Use custom ffmpeg build. Please beware that an invalid file may crash application.</string>
    <string name="decoder_hardware">Hardware decoder</string>
    <string name="decoder_software">Software decoder</string>
    <string name="appearance">Appearance</string>
    <string name="scan">Scan</string>
    <string name="playback">Playback</string>
    <string name="text_processing">Text processing</string>
    <string name="load">Load</string>
    <string name="user_data">User data</string>
    <string name="fast_seek">Fast seeking</string>
    <string name="fast_seek_summary">Seek to nearest keyframe position instead of exact position. This setting applies to h/w+ and s/w decoders.</string>
    <string name="subtitle">Subtitle</string>
    <string name="open_url">Network stream</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_property">Properties</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_deinterlace">Deinterlace</string>
    <string name="help">Help</string>
    <string name="version_check">Check for updates</string>
    <string name="faq">FAQ</string>
    <string name="decoder">Decoder</string>
    <string name="tune_display">Display</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="status_bar">Status bar</string>
    <string name="status_text">Battery/clock</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="tune_orientation">Orientation</string>
    <string name="tune_enable_brightness">Brightness</string>
    <string name="tune_subtitle_background">Background</string>
    <string name="cfg_general">General</string>
    <string name="cfg_clear_history">Clear history</string>
    <string name="cfg_clear_history_summary">Clear all user activity records, including playback history and search history.</string>
    <string name="cfg_clear_thumbnail">Clear thumbnail cache</string>
    <string name="cfg_clear_thumbnail_summary">Clear thumbnails cached on the sdcard. Thumbnails will be generated again when video list is opened.</string>
    <string name="cfg_player">Player</string>
    <string name="cfg_default_swaudio">S/W audio</string>
    <string name="cfg_default_swaudio_summary">Use s/w audio decoder instead of h/w audio decoder.</string>
    <string name="cfg_default_deinterlace_summary">Deinterlace by default. Currently deinterlacing works only with s/w decoder.</string>
    <string name="cfg_playback_complete_action">Playback complete action</string>
    <string name="cfg_playback_complete_action_summary">Select action after playback completes.</string>
    <string name="cfg_pause_on_seek">Pause after positioning</string>
    <string name="cfg_pause_on_seek_summary">Pause the playback after changing position.</string>
    <string name="cfg_zoom_delay">Video resizing delay</string>
    <string name="cfg_zoom_delay_summary">Set delay time when resizing h/w decoded video screen. Set higher value if the screen flickers severely or freezes while resizing.</string>
    <string name="cfg_zoom_delay_message">Set delay time in milliseconds:</string>
    <string name="cfg_tuner_screen">Screen</string>
    <string name="cfg_tuner_navigation">Navigation</string>
    <string name="cfg_tuner_navigation_summary">Navigation settings: seeking settings, forward/backward buttons, etc.</string>
    <string name="cfg_subtitle_auto_display">Enable subtitles</string>
    <string name="cfg_subtitle_auto_display_summary">Show overlaying subtitles during video playback.</string>
    <string name="cfg_subtitle_charset">Character encoding</string>
    <string name="cfg_subtitle_charset_summary">Select character encoding of your subtitle file.</string>
    <string name="cfg_italic_tag">Italic effect</string>
    <string name="cfg_italic_tag_summary">Sentences that start with \"/\" (forward slash) will be displayed in italics.</string>
    <string name="cfg_tuner_subtitle_text">Text</string>
    <string name="cfg_tuner_subtitle_text_summary">Subtitle text settings: font, size, color, border, etc.</string>
    <string name="cfg_tuner_subtitle_layout">Layout</string>
    <string name="cfg_tuner_subtitle_layout_summary">Subtitle layout settings: alignment, padding, background color.</string>
    <string name="cfg_list">List</string>
    <string name="cfg_group_by_folder">Group by folders</string>
    <string name="cfg_group_by_folder_summary">Group videos by located folders.</string>
    <string name="cfg_respect_nomedia">Respect .nomedia</string>
    <string name="cfg_respect_nomedia_summary">Exclude a folder if \".nomedia\" file exists in that folder or in a parent folder.</string>
    <string name="cfg_show_hidden">Show hidden files and folders</string>
    <string name="cfg_show_hidden_summary">Show hidden folders and files starting with \".\" (dot).</string>
    <string name="cfg_scan_root">Video folders</string>
    <string name="cfg_scan_root_summary">Select your video folders. Specified folders and all subfolders will be scanned.</string>
    <string name="cfg_video_file">File extensions</string>
    <string name="cfg_video_file_summary">Select file extensions for scanning video. Decoders for each extension can also be selected.</string>
</resources>