<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/decoder" android:visible="false" android:alphabeticShortcut="c" />
    <item android:id="@id/caption" android:visible="false" android:alphabeticShortcut="s" />
    <item android:id="@id/audio" android:visible="false" android:alphabeticShortcut="a" />
    <item android:icon="@drawable/ic_menu_play_clip" android:title="@string/play">
        <menu>
            <item android:id="@id/sticky" android:title="@string/sticky" android:checkable="true" />
            <item android:id="@id/shuffle" android:title="@string/shuffle" android:alphabeticShortcut="u" android:checkable="true" />
            <item android:id="@id/loop" android:title="@string/loop" android:alphabeticShortcut="l" android:checkable="true" />
            <item android:id="@id/open_url" android:title="@string/open_url" android:alphabeticShortcut="n" />
        </menu>
    </item>
    <item android:icon="@drawable/monitor" android:title="@string/tune_display">
        <menu>
            <item android:id="@id/rotation" android:title="@string/screen_rotation" android:alphabeticShortcut="r" android:checkable="true" />
            <item android:id="@id/deinterlace" android:title="@string/menu_deinterlace" android:alphabeticShortcut="i" android:checkable="true" />
            <item android:id="@id/aspect_ratio" android:title="@string/aspect_ratio" />
            <item android:id="@id/tune_display" android:title="@string/settings" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_start_conversation" android:id="@id/open_subtitle_manipulator" android:title="@string/subtitle" android:alphabeticShortcut="p" />
    <item android:icon="@android:drawable/ic_menu_manage" android:title="@string/tools">
        <menu>
            <item android:id="@id/delete" android:title="@string/menu_delete" android:alphabeticShortcut="d" />
            <item android:id="@id/detail_info" android:title="@string/menu_property" />
            <item android:id="@id/preference" android:title="@string/settings" />
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help" android:title="@string/help" android:alphabeticShortcut="h">
        <menu>
            <item android:id="@id/whats_new" android:title="@string/whats_new" />
            <item android:id="@id/features" android:title="@string/features" />
            <item android:id="@id/faq" android:title="@string/faq" />
            <item android:id="@id/checkVersion" android:title="@string/version_check" />
            <item android:id="@id/send_bug_report" android:title="@string/error_report" />
            <item android:id="@id/about" android:title="@string/cfg_info" />
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/quit" android:title="@string/quit" android:alphabeticShortcut="x" />
</menu>
