<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/media_scan" android:visible="false" android:alphabeticShortcut="r" />
    <item android:icon="@android:drawable/ic_menu_add" android:id="@id/open_url" android:title="@string/open_url" android:alphabeticShortcut="n" />
    <item android:icon="@android:drawable/ic_menu_edit" android:id="@id/edit" android:title="@string/menu_edit" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/preference" android:title="@string/settings" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help" android:title="@string/help" android:alphabeticShortcut="h">
        <menu>
            <item android:id="@id/whats_new" android:title="@string/whats_new" />
            <item android:id="@id/features" android:title="@string/features" />
            <item android:id="@id/faq" android:title="@string/faq" />
            <item android:id="@id/checkVersion" android:title="@string/version_check" />
            <item android:id="@id/send_bug_report" android:title="@string/error_report" />
            <item android:id="@id/about" android:title="@string/cfg_info" />
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/quit" android:title="@string/quit" android:alphabeticShortcut="x" />
</menu>
