<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="0.0px" android:choiceMode="multipleChoice" android:layout_weight="1.0" android:fastScrollEnabled="true" android:smoothScrollbar="true" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center" android:id="@id/add" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/add" android:layout_weight="1.0" />
        <Button android:layout_gravity="center" android:id="@id/remove" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/remove" android:layout_weight="1.0" />
        <Button android:layout_gravity="center" android:id="@id/change" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/decoder" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
